--- a/styles/style.css
+++ b/styles/style.css
@@ -66,8 +66,9 @@
 .header__image {
   display: flex;
   justify-content: end;
-  max-width: 500px;
-  margin-top: 60px;
+  max-width: 650px;
+  margin-top: 40px;
+  margin-left: 50px;
 }
 
 .header__footer {
